--- a/dashboard-shell/public/index.html
+++ b/dashboard-shell/public/index.html
@@ -5,5 +5,5 @@
   </head>
   <body>
     <div id="root"></div>
- </body>
+ <script src="/main.bundle.js"></script><script src="/main.bundle.js"></script></body>
  </html>
