Sidebar with font-awesome

--- a/dashboard-shell/public/index.html
+++ b/dashboard-shell/public/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  </head>
+    <script
+      src="https://kit.fontawesome.com/9129ea9f4a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
- <script src="/main.bundle.js"></script><script src="/main.bundle.js"></script></body>
- </html>
+  </body>
+</html>
