--- a/dashboard-shell/public/index.html
+++ b/dashboard-shell/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <!-- Ui Components Remote -->
     <script src="http://localhost:3002/remoteEntry.js"></script>
+    <script
+      src="https://kit.fontawesome.com/9129ea9f4a.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
