--- a/packages/dashboard-shell/public/index.html
+++ b/packages/dashboard-shell/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Dashboard Shell</title>
     <!-- Ui Components Remote -->
     <script src="http://localhost:3002/remoteEntry.js"></script>
     <script
