--- a/packages/finance-dashboard/public/index.html
+++ b/packages/finance-dashboard/public/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Dashboard Shell</title>
+    <title>Finance Dashboard</title>
     <!-- Ui Components Remote -->
-    <script src="http://localhost:3002/remoteEntry.js"></script>
+    <script src="http://localhost:3001/remoteEntry.js"></script>
     <script
       src="https://kit.fontawesome.com/9129ea9f4a.js"
       crossorigin="anonymous"
